# gs1_gpc_python

./: .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  README.md  gpc_import_json.py  gpc_import_xml.py  instances  pyproject.toml  requirements.txt  setup.cfg  setup.py  version_update.py
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.rst
docs/api/: callbacks.rst  cli.rst  db.rst  downloader.rst  exporter.rst  models.rst  parser.rst
docs/dev/: contributing.rst  releasing.rst  testing.rst
docs/user/: advanced_usage.rst  cli.rst  database.rst  installation.rst  quickstart.rst
gs1_gpc/: __init__.py
imports/: gpc_data_four_family.xml  gpc_data_single_brick.xml
