[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs1-gpc"
version = "0.1.0"
description = "A tool for importing GS1 Global Product Classification (GPC) data into SQL databases"
readme = "README.md"
authors = [
    {name = "Michael McGarrah", email = "mcgarrah@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
gpc = "gs1_gpc.cli:cli"

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=22.3",
    "flake8>=3.9",
]

[project.urls]
Homepage = "https://github.com/mcgarrah/gs1_gpc_import"
"Bug Tracker" = "https://github.com/mcgarrah/gs1_gpc_import/issues"

[tool.setuptools]
packages = ["gs1_gpc"]